--- a/output/html/Makefile
+++ b/output/html/Makefile
@@ -1,3 +1,3 @@
 FLAGS :=
 bindata:
-	go-bindata -pkg output -o template.go $(FLAGS) template.tmpl
+	go-bindata -pkg htmlout -o template.go $(FLAGS) template.tmpl
